# guitar-diagnostics

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  vcpkg.json
.claude/: QUICK-REFERENCE.md
.claude/agents/: README.md  dsp-algorithm-validator.md  performance-profiler.md  realtime-safety-auditor.md  test-coverage-analyzer.md  thread-safety-analyzer.md
.claude/commands/: add-analyzer.md  dsp-validate.md  perf-profile.md  review-commit.md  rt-audit.md
.claude/docs/: architecture.md  build-and-test.md  cpp-coding-standards.md  dsp-algorithms.md  git-workflow.md  real-time-constraints.md  recommended-subagents.md
.claude/skills/architecture-explainer/: SKILL.md
.claude/templates/: comparative-analysis.md  role-play-scenarios.md
.github/workflows/: build.yml  deploy.yml  static-analysis.yml  tests.yml
docs/: FAQ.md  TROUBLESHOOTING.md  USER_GUIDE.md
scripts/: run-coverage.py
src/: CMakeLists.txt  GuitarDiagnostics.cpp
src/Analysis/: AnalysisEngine.cpp  AnalysisEngine.h  AnalysisResult.cpp  Analyzer.h  StringDetector.cpp  StringDetector.h
src/Analysis/Fretbuzz/: FretBuzzDetector.cpp  FretBuzzDetector.h
src/Analysis/Intonation/: IntonationAnalyzer.cpp  IntonationAnalyzer.h
src/Analysis/StringHealth/: StringHealthAnalyzer.cpp  StringHealthAnalyzer.h
src/App/: Application.cpp  Application.h  AudioProcessingLayer.cpp  AudioProcessingLayer.h  DiagnosticVisualizationLayer.cpp  DiagnosticVisualizationLayer.h
src/Audio/: AudioDeviceManager.cpp  AudioDeviceManager.h
src/UI/: AudioStatusBar.cpp  AudioStatusBar.h  Panel.h  TabController.cpp  TabController.h
src/UI/Panels/: AudioMonitorPanel.cpp  AudioMonitorPanel.h  FretBuzzPanel.cpp  FretBuzzPanel.h  IntonationPanel.cpp  IntonationPanel.h  StringHealthPanel.cpp  StringHealthPanel.h
src/Util/: LockFreeRingBuffer.h
tests/: CMakeLists.txt
tests/Analysis/: TestAnalysisEngine.cpp  TestFretBuzzDetector.cpp  TestIntonationAnalyzer.cpp  TestStringDetector.cpp  TestStringHealthAnalyzer.cpp
tests/Audio/: TestAudioDeviceManager.cpp
tests/Integration/: TestAnalysisPipeline.cpp
tests/Util/: TestLockFreeRingBuffer.cpp
